--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2567,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2593,10 +2593,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe838bf1b20>"
+       "<matplotlib.legend.Legend at 0x7fe838439190>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
